// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Component Accessibility should have proper ARIA attributes 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="60"
    aria-valuetext="60%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="60"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="60"
      style="transform: translateX(-40%);"
    />
  </div>
</div>
`;

exports[`Progress Component Accessibility should have proper role attribute 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    aria-valuetext="30%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="30"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="30"
      style="transform: translateX(-70%);"
    />
  </div>
</div>
`;

exports[`Progress Component Edge Cases should handle undefined value gracefully 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component Rendering should render progress bar with custom className 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 custom-progress"
    data-max="100"
    data-state="loading"
    data-value="50"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component Rendering should render progress bar with custom value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    aria-valuetext="75%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="75"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="75"
      style="transform: translateX(-25%);"
    />
  </div>
</div>
`;

exports[`Progress Component Rendering should render progress bar with default value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="50"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component Rendering should render progress bar with maximum value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    aria-valuetext="100%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="complete"
    data-value="100"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="complete"
      data-value="100"
      style="transform: translateX(-0%);"
    />
  </div>
</div>
`;

exports[`Progress Component Rendering should render progress bar with zero value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="0"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="0"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component Snapshot Testing should maintain consistent UI structure across different values: progress-25-percent 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="25"
    aria-valuetext="25%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="25"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="25"
      style="transform: translateX(-75%);"
    />
  </div>
</div>
`;

exports[`Progress Component Snapshot Testing should maintain consistent UI structure across different values: progress-50-percent 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="50"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component Snapshot Testing should maintain consistent UI structure across different values: progress-75-percent 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    aria-valuetext="75%"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-max="100"
    data-state="loading"
    data-value="75"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="75"
      style="transform: translateX(-25%);"
    />
  </div>
</div>
`;

exports[`Progress Component Snapshot Testing should maintain consistent UI structure with custom styling: progress-custom-styling 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="60"
    aria-valuetext="60%"
    class="relative w-full overflow-hidden rounded-full h-4 bg-blue-100 border-2 border-blue-300"
    data-max="100"
    data-state="loading"
    data-value="60"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="loading"
      data-value="60"
      style="transform: translateX(-40%);"
    />
  </div>
</div>
`;
